[DDW-544] Fix clipped stake pool tile glow in list

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
@@ -20,6 +20,10 @@
 }
 
 .list {
+  overflow: visible !important;
+  :global(.ReactVirtualized__Grid__innerScrollContainer) {
+    overflow: visible !important;
+  }
   &:focus {
     outline: 0;
   }
